# ros2_kobuki

./: .gitignore  README.md
kobuki/: CMakeLists.txt  package.xml
kobuki_description/: CMakeLists.txt  package.xml
kobuki_description/launch/: view_model.py
kobuki_description/rviz/: model.rviz
kobuki_description/urdf/: kobuki_standalone.urdf
kobuki_description/xacro/: kobuki_gazebo.urdf.xacro
kobuki_softnode/: CMakeLists.txt  package.xml
kobuki_softnode/include/kobuki_softnode/: fake_kobuki.hpp  fake_kobuki_ros.hpp
kobuki_softnode/launch/: full.launch.py
kobuki_softnode/rviz/: kobuki.rviz
kobuki_softnode/src/: fake_kobuki.cpp  fake_kobuki_ros.cpp
ros2_kobuki/: CMakeLists.txt  package.xml
