<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kobuki</name>
  <version>0.0.0</version>
  <description>
    Minimal ROS 2 software for Kobuki, Yujin Robot's mobile research base.  Based on Daniel Stonier original implementation for ROS 1.
  </description>
  <maintainer email="v.arriola@ciencias.unam.mx">blackzafiro</maintainer>
  <license>GNU 3.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <run_depend>kobuki_description</run_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
