<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kobuki_description</name>
  <version>0.0.0</version>
  <description>
	  Description of the Kobuki model.
	  Based on Daniel Stonier original implementation for ROS 1.
  </description>
  <author email="stonier@yujinrobot.com">Daniel Stonier</author>
  <author email="marcus.liebhardt@yujinrobot.com">Marcus Liebhardt</author>
  <author email="yhju@yujinrobot.com">Younghun Ju</author>
  <author email="v.arriola@ciencias.unam.mx">Vero E. Arriola</author>
  <maintainer email="v.arriola@ciencias.unam.mx">blackzafiro</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
