<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kobuki_softnode</name>
  <version>0.0.0</version>
  <description>ROS 2 node for fake Kobuki adapted from original for ROS 1 by Jihoon Lee.</description>
  <maintainer email="v.arriola@ciencias.unam.mx">blackzafiro</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>diagnostic_aggregator</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>kobuki_description</exec_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>kobuki_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
